rcon-web/rcon-web-admin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rcon-web-admin-http
  namespace: traefik
spec:
  parentRefs:
    - name: traefik
      sectionName: http-rcon
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rcon-web-admin
          namespace: rcon-web-admin
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /websocket
      backendRefs:
        - name: rcon-web-admin
          namespace: rcon-web-admin
          port: 4327
